Update notebook HTML

--- a/notebooks/html/artificial_neural_networks_basics.html
+++ b/notebooks/html/artificial_neural_networks_basics.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7606,7 +7606,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Biological Neuron" src="images/illustrations/ann/biological-neuron.png" style="margin:auto;width:80%;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/ann/biological-neuron.png" style="margin:auto;width:80%;"/></p>
 <p>Source: "Anatomy and Physiology" by the US National Cancer Institute's Surveillance, Epidemiology and End Results (SEER) Program (<a href="https://commons.wikimedia.org/wiki/File:Neuron.svg">Wiki Commons</a>)</p>
 </div>
 </div>
@@ -7705,7 +7705,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Logistic Regression as an Artififical Neuron" src="images/illustrations/ann/logistic-regression-neuron.png" style="margin:auto"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/ann/logistic-regression-neuron.png" style="margin:auto"/>
 </div>
 </div>
 </div>
@@ -7751,7 +7751,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="General Artififical Neuron" src="images/illustrations/ann/artificial-neuron.png" style="margin:auto"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/ann/artificial-neuron.png" style="margin:auto"/>
 </div>
 </div>
 </div>
@@ -7784,7 +7784,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Decision Boundary for a Single Neuron" src="images/plots/ann/decision-boundary-1n.png"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/plots/ann/decision-boundary-1n.png"/>
 </div>
 </div>
 </div>
@@ -7845,7 +7845,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Basic Network Layer" src="images/illustrations/ann/basic-network-layer.png" style="margin:auto"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/ann/basic-network-layer.png" style="margin:auto"/>
 </div>
 </div>
 </div>
@@ -8002,7 +8002,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Basic Layer Stack" src="images/illustrations/ann/basic-layer-stack.png" style="margin:auto"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/ann/basic-layer-stack.png" style="margin:auto"/>
 </div>
 </div>
 </div>
@@ -8045,7 +8045,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Basic ANN Architecture" src="images/illustrations/ann/basic-ann.png" style="margin:auto"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/ann/basic-ann.png" style="margin:auto"/>
 </div>
 </div>
 </div>
@@ -8078,7 +8078,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Basic ANN Architecture (annotated)" src="images/illustrations/ann/basic-ann-annotated.png" style="margin:auto"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/ann/basic-ann-annotated.png" style="margin:auto"/>
 </div>
 </div>
 </div>
@@ -8278,7 +8278,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="ANN - Worked Example" src="images/illustrations/ann/ann-capacity-03.png" style="margin:auto"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/ann/ann-capacity-03.png" style="margin:auto"/>
 </div>
 </div>
 </div>
@@ -8615,16 +8615,16 @@ $$</p>
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <table style="background:transparent;">
 <tr style="background:transparent;">
-<td><img alt="" src="images/illustrations/ann/ann-capacity-01.png"/></td>
-<td><img alt="" src="images/plots/ann/decision-boundary-1n.png" style="width:75%;"/></td>
+<td><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/ann/ann-capacity-01.png"/></td>
+<td><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/plots/ann/decision-boundary-1n.png" style="width:75%;"/></td>
 </tr>
 <tr style="background:transparent;">
-<td><img alt="" src="images/illustrations/ann/ann-capacity-02.png"/></td>
-<td><img alt="" src="images/plots/ann/decision-boundary-2n.png" style="width:75%;"/></td>
+<td><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/ann/ann-capacity-02.png"/></td>
+<td><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/plots/ann/decision-boundary-2n.png" style="width:75%;"/></td>
 </tr>
 <tr style="background:transparent;">
-<td><img alt="" src="images/illustrations/ann/ann-capacity-03.png"/></td>
-<td><img alt="Drawing" src="images/plots/ann/decision-boundary-3n.png" style="width:75%;"/></td>
+<td><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/ann/ann-capacity-03.png"/></td>
+<td><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/plots/ann/decision-boundary-3n.png" style="width:75%;"/></td>
 </tr></table>
 </div>
 </div>
