--- a/notebooks/html/attention_mha_basics.html
+++ b/notebooks/html/attention_mha_basics.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7624,7 +7624,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Advanced Example - Computational Graph" src="images/illustrations/attention/attention-motivation-basic-embedding-01.png" style="margin:auto;max-width:800px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-motivation-basic-embedding-01.png" style="margin:auto;max-width:800px;width:100%"/>
 </div>
 </div>
 </div>
@@ -7647,7 +7647,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Advanced Example - Computational Graph" src="images/illustrations/attention/attention-motivation-basic-embedding-02.png" style="margin:auto;max-width:800px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-motivation-basic-embedding-02.png" style="margin:auto;max-width:800px;width:100%"/>
 </div>
 </div>
 </div>
@@ -7690,7 +7690,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Attention Head (Conceptual Idea)" src="images/illustrations/attention/attention-core-idea.png" style="margin:auto;max-width:800px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-core-idea.png" style="margin:auto;max-width:800px;width:100%"/>
 </div>
 </div>
 </div>
@@ -7723,7 +7723,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Multi-Head Attention (Conceptual Idea)" src="images/illustrations/attention/multi-head-attention-core-idea.png" style="margin:auto;max-width:800px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/multi-head-attention-core-idea.png" style="margin:auto;max-width:800px;width:100%"/>
 </div>
 </div>
 </div>
@@ -7864,7 +7864,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Self-Attention: Input Embedding Matrix" src="images/illustrations/attention/attention-encoder-self-attention-input-embedding.png" style="margin:auto;max-width:500px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-encoder-self-attention-input-embedding.png" style="margin:auto;max-width:500px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8038,7 +8038,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Self-Attention: QKV Transformation" src="images/illustrations/attention/attention-encoder-self-attention-qkv-transformation.png" style="margin:auto;max-width:800px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-encoder-self-attention-qkv-transformation.png" style="margin:auto;max-width:800px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8072,7 +8072,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Self-Attention: Attention Scores" src="images/illustrations/attention/attention-encoder-self-attention-scores.png" style="margin:auto;max-width:600px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-encoder-self-attention-scores.png" style="margin:auto;max-width:600px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8105,7 +8105,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Self-Attention: Attention Weights" src="images/illustrations/attention/attention-encoder-self-attention-weights.png" style="margin:auto;max-width:450px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-encoder-self-attention-weights.png" style="margin:auto;max-width:450px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8138,7 +8138,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Self-Attention: Attention Weights" src="images/illustrations/attention/attention-encoder-self-attention-output.png" style="margin:auto;max-width:650px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-encoder-self-attention-output.png" style="margin:auto;max-width:650px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8195,7 +8195,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Self-Attention in Decoder" src="images/illustrations/attention/attention-encoder-self-attention-full.png" style="margin:auto;max-width:1000px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-encoder-self-attention-full.png" style="margin:auto;max-width:1000px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8217,7 +8217,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Attention is all you Need: Scaled Dot-Prodict Attention" src="images/illustrations/attention/attention-paper-01.png" style="margin:auto;max-width:250px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-paper-01.png" style="margin:auto;max-width:250px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8300,7 +8300,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Self-Attention in Decoder" src="images/illustrations/attention/attention-decoder-self-attention-full.png" style="margin:auto;max-width:1000px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-decoder-self-attention-full.png" style="margin:auto;max-width:1000px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8323,7 +8323,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Cross-Attention in Decoder" src="images/illustrations/attention/attention-decoder-cross-attention-full.png" style="margin:auto;max-width:1000px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-decoder-cross-attention-full.png" style="margin:auto;max-width:1000px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8356,7 +8356,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Attention is all you Need: Attention Head" src="images/illustrations/attention/attention-paper-02.png" style="margin:auto;max-width:350px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-paper-02.png" style="margin:auto;max-width:350px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8570,7 +8570,7 @@ Shape of output tensor for the decoder: torch.Size([1, 5, 6])
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Attention is all you Need: Multi-Head Attention" src="images/illustrations/attention/attention-paper-03.png" style="margin:auto;max-width:350px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-paper-03.png" style="margin:auto;max-width:350px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8752,7 +8752,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Cross-Attention in Decoder" src="images/illustrations/attention/attention-encoder-mha-output.png" style="margin:auto;max-width:1000px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-encoder-mha-output.png" style="margin:auto;max-width:1000px;width:100%"/>
 </div>
 </div>
 </div>
@@ -9017,7 +9017,7 @@ torch.Size([1, 5, 12])
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Complete Transformer Architecture (with attention layers highlighted)" src="images/illustrations/attention/attention-highlight-transformer.png" style="margin:auto;max-width:500px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-highlight-transformer.png" style="margin:auto;max-width:500px;width:100%"/>
 </div>
 </div>
 </div>
