--- a/notebooks/html/backpropagation_basic_examples.html
+++ b/notebooks/html/backpropagation_basic_examples.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7622,7 +7622,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Example of Computational Graph" src="images/illustrations/backpropagation/cg-chain-rule-example.png" style="margin:auto;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-chain-rule-example.png" style="margin:auto;"/></p>
 </div>
 </div>
 </div>
@@ -7670,7 +7670,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Simple Example - Basic Computational Graph" src="images/illustrations/backpropagation/cg-simple-example-01.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-simple-example-01.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7707,7 +7707,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Simple Example - Basic Computational Graph" src="images/illustrations/backpropagation/cg-simple-example-02.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-simple-example-02.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7737,7 +7737,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Simple Example - Basic Computational Graph" src="images/illustrations/backpropagation/cg-simple-example-03.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-simple-example-03.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7773,7 +7773,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Simple Example - Basic Computational Graph" src="images/illustrations/backpropagation/cg-simple-example-04.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-simple-example-04.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7808,7 +7808,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Simple Example - Basic Computational Graph" src="images/illustrations/backpropagation/cg-simple-example-05.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-simple-example-05.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7845,7 +7845,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Advanced Example - Computational Graph" src="images/illustrations/backpropagation/cg-advanced-example-11.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-advanced-example-11.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7904,7 +7904,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Advanced Example - Computational Graph" src="images/illustrations/backpropagation/cg-advanced-example-12.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-advanced-example-12.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7934,7 +7934,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Advanced Example - Computational Graph" src="images/illustrations/backpropagation/cg-advanced-example-13.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-advanced-example-13.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7970,7 +7970,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Advanced Example - Computational Graph" src="images/illustrations/backpropagation/cg-advanced-example-14.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-advanced-example-14.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -8006,7 +8006,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Advanced Example - Computational Graph" src="images/illustrations/backpropagation/cg-advanced-example-15.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-advanced-example-15.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -8042,7 +8042,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Advanced Example - Computational Graph" src="images/illustrations/backpropagation/cg-advanced-example-16.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-advanced-example-16.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -8076,7 +8076,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Advanced Example - Computational Graph" src="images/illustrations/backpropagation/cg-advanced-example-17.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-advanced-example-17.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -8102,7 +8102,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Advanced Example - Computational Graph" src="images/illustrations/backpropagation/cg-advanced-example-18.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-advanced-example-18.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -8138,7 +8138,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Advanced Example - Computational Graph" src="images/illustrations/backpropagation/cg-advanced-example-19.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/backpropagation/cg-advanced-example-19.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
