--- a/notebooks/html/curse_of_dimensionality.html
+++ b/notebooks/html/curse_of_dimensionality.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7618,7 +7618,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Data Sparsity Example" src="images/illustrations/curseofdim/curseofdim-sparsity-example-01.png" style="margin:auto;max-width:800px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/curseofdim/curseofdim-sparsity-example-01.png" style="margin:auto;max-width:800px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -7652,7 +7652,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Data Sparsity Example" src="images/illustrations/curseofdim/curseofdim-sparsity-example-02.png" style="margin:auto;max-width:800px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/curseofdim/curseofdim-sparsity-example-02.png" style="margin:auto;max-width:800px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -7802,7 +7802,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Histogram of Pairwise Distances" src="images/animations/curseofdim/curseofdim-pairwise-distance-histograms.gif" style="max-width:700px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/animations/curseofdim/curseofdim-pairwise-distance-histograms.gif" style="max-width:700px;width:100%"/></p>
 </div>
 </div>
 </div>
