--- a/notebooks/html/decision_trees_basics.html
+++ b/notebooks/html/decision_trees_basics.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7928,7 +7928,7 @@ END IF
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Decision Tree for Banking Example" src="images/illustrations/decision-trees/dt-banking-example-01.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-banking-example-01.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -8008,7 +8008,7 @@ END IF
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Decision Tree for Banking Example" src="images/illustrations/decision-trees/dt-banking-example-02.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-banking-example-02.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -8201,7 +8201,7 @@ YES
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Decision Tree for Banking Example" src="images/illustrations/decision-trees/dt-banking-example-02a.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-banking-example-02a.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -8224,7 +8224,7 @@ YES
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Decision Tree for Banking Example" src="images/illustrations/decision-trees/dt-banking-example-02b.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-banking-example-02b.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -8248,7 +8248,7 @@ YES
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Decision Tree for Banking Example" src="images/illustrations/decision-trees/dt-banking-example-02c.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-banking-example-02c.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -8357,7 +8357,7 @@ YES
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Decision Tree for Banking Example" src="images/illustrations/decision-trees/dt-banking-example-02a.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-banking-example-02a.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -8379,9 +8379,9 @@ YES
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Split Alternative 1" src="images/illustrations/decision-trees/dt-banking-example-split02.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-banking-example-split02.png" style="margin:auto;"/>
 <br/><br/>
-<img alt="Split Alternative 1" src="images/illustrations/decision-trees/dt-banking-example-split01.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-banking-example-split01.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -8497,7 +8497,7 @@ YES
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Decision Tree ID3 Example Split" src="images/illustrations/decision-trees/dt-banking-example-id3.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-banking-example-id3.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
