--- a/notebooks/html/decision_trees_cart.html
+++ b/notebooks/html/decision_trees_cart.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7815,7 +7815,7 @@ File 'data/datasets/tabular/classification/example-data-cart-overfitting-underfi
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Decision Tree for Banking Example" src="images/illustrations/decision-trees/dt-banking-example-01.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-banking-example-01.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7838,7 +7838,7 @@ File 'data/datasets/tabular/classification/example-data-cart-overfitting-underfi
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Decision Tree for Banking Example" src="images/illustrations/decision-trees/dt-banking-example-02.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-banking-example-02.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7935,7 +7935,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="CART Algorithm - Thresholds Example" src="images/illustrations/decision-trees/dt-cart-nonnominal-thresholds-example.png" style="margin:auto;max-width:600px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-cart-nonnominal-thresholds-example.png" style="margin:auto;max-width:600px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8106,7 +8106,7 @@ Candidate thresholds for feature 'Annual_Income':  [45000. 55000. 65000. 72500. 
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="CART Algorithm - Partitions Example" src="images/illustrations/decision-trees/dt-cart-nominal-partitions-example.png" style="margin:auto;max-width:800px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-cart-nominal-partitions-example.png" style="margin:auto;max-width:800px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8324,7 +8324,7 @@ All partitions for marital statuses:
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="CART Algorithm - Alternative Splits (Example)" src="images/illustrations/decision-trees/dt-cart-alternative-splits-motivation.png" style="margin:auto;max-width:800px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-cart-alternative-splits-motivation.png" style="margin:auto;max-width:800px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8585,7 +8585,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="CART Algorithm - Example Split 1" src="images/illustrations/decision-trees/dt-cart-alternative-splits-motivation-a.png" style="margin:auto;max-width:350px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-cart-alternative-splits-motivation-a.png" style="margin:auto;max-width:350px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8635,7 +8635,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="CART Algorithm - Example Split 2" src="images/illustrations/decision-trees/dt-cart-alternative-splits-motivation-b.png" style="margin:auto;max-width:350px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-cart-alternative-splits-motivation-b.png" style="margin:auto;max-width:350px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8921,7 +8921,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="CART Algorithm - Alternative Splits (Example for Regression)" src="images/illustrations/decision-trees/dt-cart-alternative-splits-motivation-rss.png" style="margin:auto;max-width:850px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-cart-alternative-splits-motivation-rss.png" style="margin:auto;max-width:850px;width:100%"/>
 </div>
 </div>
 </div>
@@ -9441,7 +9441,7 @@ Split:      ([1, 4, 6], [0, 2, 3, 5, 7, 8])
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Decision Tree for Banking Example" src="images/illustrations/decision-trees/dt-banking-example-02.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-banking-example-02.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -9588,7 +9588,7 @@ Split:      ([1, 4, 6], [0, 2, 3, 5, 7, 8])
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="CART Algorithm - Binning Example" src="images/illustrations/decision-trees/dt-cart-nonnominal-thresholds-binning.png" style="margin:auto;max-width:600px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/decision-trees/dt-cart-nonnominal-thresholds-binning.png" style="margin:auto;max-width:600px;width:100%"/>
 </div>
 </div>
 </div>
