--- a/notebooks/html/llm_model_fine_tuning_overview.html
+++ b/notebooks/html/llm_model_fine_tuning_overview.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -8248,7 +8248,7 @@ words with the prefixes <em>man-</em>, <em>woman-</em>, <em>boy-, and *girl-</em
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Full Fine-Tuning" src="images/illustrations/finetuning/finetuning-full-finetuning.png" style="margin:auto;max-width:400px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/finetuning/finetuning-full-finetuning.png" style="margin:auto;max-width:400px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8283,7 +8283,7 @@ words with the prefixes <em>man-</em>, <em>woman-</em>, <em>boy-, and *girl-</em
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Partial Fine-Tuning" src="images/illustrations/finetuning/finetuning-partial-finetuning.png" style="margin:auto;max-width:400px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/finetuning/finetuning-partial-finetuning.png" style="margin:auto;max-width:400px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8329,7 +8329,7 @@ words with the prefixes <em>man-</em>, <em>woman-</em>, <em>boy-, and *girl-</em
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="LoRA - Basic Setup" src="images/illustrations/lora/lora-basic-setup.png" style="margin:auto;max-width:350px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/lora/lora-basic-setup.png" style="margin:auto;max-width:350px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8441,7 +8441,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Adapters - Basic Example" src="images/illustrations/nnadapters/nnadapters-basic-example.png" style="margin:auto;max-width:200px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/nnadapters/nnadapters-basic-example.png" style="margin:auto;max-width:200px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8465,7 +8465,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Adapters - Basic Setups" src="images/illustrations/nnadapters/nnadapters-basic-setups.png" style="margin:auto;max-width:800px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/nnadapters/nnadapters-basic-setups.png" style="margin:auto;max-width:800px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8532,7 +8532,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Feature Extraction" src="images/illustrations/featureextraction/featureextration-basic-setup.png" style="margin:auto;max-width:350px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/featureextraction/featureextration-basic-setup.png" style="margin:auto;max-width:350px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8566,7 +8566,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Retreival-Augmented Generation (RAG) - Basic Setup" src="images/illustrations/rag/rag-basic-setup.png" style="margin:auto;max-width:600px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rag/rag-basic-setup.png" style="margin:auto;max-width:600px;width:100%"/></p>
 </div>
 </div>
 </div>
