--- a/notebooks/html/recurrent_neural_networks_basics.html
+++ b/notebooks/html/recurrent_neural_networks_basics.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7694,7 +7694,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Basic Feed-Forward Neural Network" src="images/illustrations/rnn/basic-ann.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/basic-ann.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7800,7 +7800,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Abstraction of FFN" src="images/illustrations/rnn/basic-ann-abstraction-labeled.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/basic-ann-abstraction-labeled.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7858,7 +7858,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Abstraction of RNN" src="images/illustrations/rnn/basic-rnn-abstraction-labeled.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/basic-rnn-abstraction-labeled.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7891,7 +7891,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Unrolled RNN" src="images/illustrations/rnn/basic-rnn-unrolled.png" style="margin:auto;"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/basic-rnn-unrolled.png" style="margin:auto;"/>
 </div>
 </div>
 </div>
@@ -7951,7 +7951,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Vanilla RNN Cell" src="images/illustrations/rnn/rnn-full.png" style="margin:auto;max-width:550px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-full.png" style="margin:auto;max-width:550px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8307,7 +8307,7 @@ Shape of hidden state h0: torch.Size([64, 512])
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Many-to-One RNN Model" src="images/illustrations/rnn/rnn-model-many2one.png" style="margin:auto;max-width:550px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-model-many2one.png" style="margin:auto;max-width:550px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8330,7 +8330,7 @@ Shape of hidden state h0: torch.Size([64, 512])
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="One-to-Many RNN Model" src="images/illustrations/rnn/rnn-model-one2many.png" style="margin:auto;max-width:650px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-model-one2many.png" style="margin:auto;max-width:650px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8352,7 +8352,7 @@ Shape of hidden state h0: torch.Size([64, 512])
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Many-to-Many RNN Model: Sequence Labeling" src="images/illustrations/rnn/rnn-model-many2many-labeling.png" style="margin:auto;max-width:550px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-model-many2many-labeling.png" style="margin:auto;max-width:550px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8375,7 +8375,7 @@ Shape of hidden state h0: torch.Size([64, 512])
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Many-to-Many RNN Model: Encoder-Decoder" src="images/illustrations/rnn/rnn-model-many2many-encdec.png" style="margin:auto;max-width:750px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-model-many2many-encdec.png" style="margin:auto;max-width:750px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8454,7 +8454,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Vanilla RNN Cell" src="images/illustrations/rnn/rnn-full.png" style="margin:auto;max-width:550px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-full.png" style="margin:auto;max-width:550px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8490,7 +8490,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="LSTM Cell" src="images/illustrations/rnn/lstm-full.png" style="margin:auto;max-width:550px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/lstm-full.png" style="margin:auto;max-width:550px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8525,7 +8525,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="GRU Cell" src="images/illustrations/rnn/gru-full.png" style="margin:auto;max-width:550px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/gru-full.png" style="margin:auto;max-width:550px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8570,7 +8570,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="GRU Cell" src="images/illustrations/rnn/rnn-2layer-unrolled.png" style="margin:auto;max-width:750px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-2layer-unrolled.png" style="margin:auto;max-width:750px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8603,7 +8603,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="GRU Cell" src="images/illustrations/rnn/rnn-bidirectional-unrolled.png" style="margin:auto;max-width:750px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-bidirectional-unrolled.png" style="margin:auto;max-width:750px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8625,7 +8625,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="GRU Cell" src="images/illustrations/rnn/rnn-2layer-bidirectional-unrolled.png" style="margin:auto;max-width:750px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-2layer-bidirectional-unrolled.png" style="margin:auto;max-width:750px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8669,7 +8669,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Many-to-Many RNN Model: Encoder-Decoder" src="images/illustrations/rnn/rnn-model-many2many-encdec.png" style="margin:auto;max-width:750px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-model-many2many-encdec.png" style="margin:auto;max-width:750px;width:100%"/>
 </div>
 </div>
 </div>
