--- a/notebooks/html/recurrent_neural_networks_language_model.html
+++ b/notebooks/html/recurrent_neural_networks_language_model.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -8052,7 +8052,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="RNN-based Language Model - Next-Word Prediction Training Setup" src="images/illustrations/rnn/rnn-lm-unrolled.png" style="margin:auto;max-width:1000px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-lm-unrolled.png" style="margin:auto;max-width:1000px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8103,7 +8103,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="RNN-based Language Model - Batching with Continuation" src="images/illustrations/rnn/rnn-lm-batching-example.png" style="margin:auto;max-width:1000px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-lm-batching-example.png" style="margin:auto;max-width:1000px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8583,7 +8583,7 @@ tensor([[14, 15, 16, 17, 18, 19],
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="2-Layer RNN" src="images/illustrations/rnn/rnn-2layer-unrolled.png" style="margin:auto;max-width:750px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rnn/rnn-2layer-unrolled.png" style="margin:auto;max-width:750px;width:100%"/>
 </div>
 </div>
 </div>
