--- a/notebooks/html/transformers_basic_architecture.html
+++ b/notebooks/html/transformers_basic_architecture.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7678,7 +7678,7 @@ Shape of TARGET tensor: torch.Size([32, 60, 512])
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Transformer Architecture" src="images/illustrations/transformer/transformer-architecture-paper.png" style="margin:auto;max-width:500px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/transformer/transformer-architecture-paper.png" style="margin:auto;max-width:500px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -7753,7 +7753,7 @@ Shape of TARGET tensor: torch.Size([32, 60, 512])
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Attention Head (Conceptual Idea)" src="images/illustrations/attention/attention-core-idea.png" style="margin:auto;max-width:800px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/attention-core-idea.png" style="margin:auto;max-width:800px;width:100%"/>
 </div>
 </div>
 </div>
@@ -7793,7 +7793,7 @@ Shape of TARGET tensor: torch.Size([32, 60, 512])
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Multi-Head Attention (Conceptual Idea)" src="images/illustrations/attention/multi-head-attention-core-idea.png" style="margin:auto;max-width:800px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/attention/multi-head-attention-core-idea.png" style="margin:auto;max-width:800px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8158,7 +8158,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Transformer Architecture" src="images/illustrations/transformer/transformer-encoder-layer-paper.png" style="margin:auto;max-width:200px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/transformer/transformer-encoder-layer-paper.png" style="margin:auto;max-width:200px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8462,7 +8462,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Transformer Architecture" src="images/illustrations/transformer/transformer-decoder-layer-paper.png" style="margin:auto;max-width:400px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/transformer/transformer-decoder-layer-paper.png" style="margin:auto;max-width:400px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8879,7 +8879,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Transformer Core Architecture" src="images/illustrations/transformer/transformer-core-architecture-paper.png" style="margin:auto;max-width:500px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/transformer/transformer-core-architecture-paper.png" style="margin:auto;max-width:500px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8939,7 +8939,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Transformer Architecture" src="images/illustrations/transformer/transformer-output-head-paper.png" style="margin:auto;max-width:200px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/transformer/transformer-output-head-paper.png" style="margin:auto;max-width:200px;width:100%"/></p>
 </div>
 </div>
 </div>
