--- a/notebooks/html/bias_variance_ml_basics.html
+++ b/notebooks/html/bias_variance_ml_basics.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7873,7 +7873,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="No description has been provided for this image" src="images/animations/biasvariance/biasvariance-effect-of-degree.gif"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/animations/biasvariance/biasvariance-effect-of-degree.gif"/></p>
 </div>
 </div>
 </div>
@@ -7963,7 +7963,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="No description has been provided for this image" src="images/animations/biasvariance/biasvariance-effect-of-dataset-size.gif"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/animations/biasvariance/biasvariance-effect-of-dataset-size.gif"/></p>
 </div>
 </div>
 </div>
@@ -8039,7 +8039,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="No description has been provided for this image" src="images/animations/biasvariance/biasvariance-effect-of-dataset-sample.gif"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/animations/biasvariance/biasvariance-effect-of-dataset-sample.gif"/></p>
 </div>
 </div>
 </div>
@@ -8102,7 +8102,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Bias vs Variance: Analogy" src="images/illustrations/biasvariance/biasvariance-targets.png" style="margin:auto"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/biasvariance/biasvariance-targets.png" style="margin:auto"/></p>
 </div>
 </div>
 </div>
@@ -8335,7 +8335,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="BiasVariance Decomposition" src="images/illustrations/biasvariance/biasvariance-total-error.png" style="margin:auto"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/biasvariance/biasvariance-total-error.png" style="margin:auto"/></p>
 </div>
 </div>
 </div>
@@ -8464,7 +8464,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Example: Learning Curves" src="images/illustrations/biasvariance/biasvariance-learning-curves.png" style="margin:auto"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/biasvariance/biasvariance-learning-curves.png" style="margin:auto"/></p>
 </div>
 </div>
 </div>
