--- a/notebooks/html/llm_training_data_preparation_basics.html
+++ b/notebooks/html/llm_training_data_preparation_basics.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -9189,7 +9189,7 @@ Der Bär hört die Hühner.
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Duplicate Data - News Articles Example" src="images/illustrations/llm/llm-data-deduplication-news-example.png" style="margin:auto;max-width:900px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/llm/llm-data-deduplication-news-example.png" style="margin:auto;max-width:900px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -9683,7 +9683,7 @@ Cosine similarity between Headline 1 and Headline 4: 0.80
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Supervised Learning - Basic Evaluation Setup" src="images/illustrations/mlsupervised/mlsupervised-basic-evaluation-setup.png" style="margin:auto;max-width:750px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/mlsupervised/mlsupervised-basic-evaluation-setup.png" style="margin:auto;max-width:750px;width:100%"/></p>
 </div>
 </div>
 </div>
