--- a/notebooks/html/positional_encodings_overview.html
+++ b/notebooks/html/positional_encodings_overview.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7666,7 +7666,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Absolute Positional Encoding: Basic Idea" src="images/illustrations/posenc/posenc-absolute-basic-idea.png" style="margin:auto;max-width:600px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/posenc/posenc-absolute-basic-idea.png" style="margin:auto;max-width:600px;width:100%"/>
 </div>
 </div>
 </div>
@@ -7699,7 +7699,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Absolute Positional Encoding: Naive Approach 1" src="images/illustrations/posenc/posenc-absolute-naive-approach-01.png" style="margin:auto;max-width:600px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/posenc/posenc-absolute-naive-approach-01.png" style="margin:auto;max-width:600px;width:100%"/>
 </div>
 </div>
 </div>
@@ -7732,7 +7732,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Absolute Positional Encoding: Naive Approach 2" src="images/illustrations/posenc/posenc-absolute-naive-approach-02.png" style="margin:auto;max-width:600px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/posenc/posenc-absolute-naive-approach-02.png" style="margin:auto;max-width:600px;width:100%"/>
 </div>
 </div>
 </div>
@@ -7765,7 +7765,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Absolute Positional Encoding: Naive Approach 3" src="images/illustrations/posenc/posenc-absolute-naive-approach-03.png" style="margin:auto;max-width:600px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/posenc/posenc-absolute-naive-approach-03.png" style="margin:auto;max-width:600px;width:100%"/>
 </div>
 </div>
 </div>
@@ -7847,7 +7847,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Absolute Positional Encoding: Generlized Setup" src="images/illustrations/posenc/posenc-absolute-generalized.png" style="margin:auto;max-width:600px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/posenc/posenc-absolute-generalized.png" style="margin:auto;max-width:600px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8094,7 +8094,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Relative Positional Encoding: Generlized Setup" src="images/illustrations/posenc/posenc-relative-generalized.png" style="margin:auto;max-width:600px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/posenc/posenc-relative-generalized.png" style="margin:auto;max-width:600px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8116,7 +8116,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Relative Positional Encoding: Position Matrix" src="images/illustrations/posenc/posenc-relative-position-matrix.png" style="margin:auto;max-width:500px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/posenc/posenc-relative-position-matrix.png" style="margin:auto;max-width:500px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8138,7 +8138,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Relative Positional Encoding: Position Matrix (Clipped)" src="images/illustrations/posenc/posenc-relative-position-matrix-clipped.png" style="margin:auto;max-width:500px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/posenc/posenc-relative-position-matrix-clipped.png" style="margin:auto;max-width:500px;width:100%"/></p>
 </div>
 </div>
 </div>
