--- a/notebooks/html/retrieval_augmented_generation_rag_basics.html
+++ b/notebooks/html/retrieval_augmented_generation_rag_basics.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7612,7 +7612,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="RAG - Basic Architecture" src="images/illustrations/rag/rag-basic-architecture.png" style="margin:auto;max-width:800px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rag/rag-basic-architecture.png" style="margin:auto;max-width:800px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -7746,7 +7746,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Inverted Index - Example" src="images/illustrations/rag/rag-inverted-index-example.png" style="margin:auto;max-width:700px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rag/rag-inverted-index-example.png" style="margin:auto;max-width:700px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -7807,7 +7807,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Vector Index - Example" src="images/illustrations/rag/rag-vector-index-example.png" style="margin:auto;max-width:700px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rag/rag-vector-index-example.png" style="margin:auto;max-width:700px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -7901,7 +7901,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="RAG - Retrieval Step" src="images/illustrations/rag/rag-basic-architecture-retrieval.png" style="margin:auto;max-width:600px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rag/rag-basic-architecture-retrieval.png" style="margin:auto;max-width:600px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -7937,7 +7937,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="RAG - Augmentation Step" src="images/illustrations/rag/rag-basic-architecture-augmentation.png" style="margin:auto;max-width:700px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rag/rag-basic-architecture-augmentation.png" style="margin:auto;max-width:700px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8004,7 +8004,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="RAG - Generation Step" src="images/illustrations/rag/rag-basic-architecture-generation.png" style="margin:auto;max-width:700px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/rag/rag-basic-architecture-generation.png" style="margin:auto;max-width:700px;width:100%"/></p>
 </div>
 </div>
 </div>
