--- a/notebooks/html/text_tokenization_basics.html
+++ b/notebooks/html/text_tokenization_basics.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -8189,7 +8189,7 @@ Output of the word_tokenize() method:
 </li>
 </ul>
 <p>The figure below illustrates the tokenization process by applying the different rules and heuristics. This image is directly take from the <a href="https://spacy.io/usage/spacy-101">spaCy website</a>:</p>
-<p><img alt="No description has been provided for this image" src="images/illustrations/tokenization/spacy-tokenizer-example.png"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/tokenization/spacy-tokenizer-example.png"/></p>
 <p>spaCy's tokenizer is designed to be highly customizable and can be trained or adjusted to accommodate specific domain requirements or languages. It forms the foundation for many subsequent natural language processing tasks, such as part-of-speech tagging, named entity recognition, and dependency parsing. Compared to NLTK, the common usage of spaCy is to process a string which not only performs tokenization but also other steps (see later tutorial). Here, we only look at the tokens. Again, we process each sentence individually to simplify the output.</p>
 </div>
 </div>
