--- a/notebooks/html/word_text_embeddings_overview.html
+++ b/notebooks/html/word_text_embeddings_overview.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7615,7 +7615,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Embeddings - Motivation (Symbolic Representation)" src="images/illustrations/embeddings/embeddings-motivation-symbolic-representation.png" style="margin:auto;max-width:900px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/embeddings/embeddings-motivation-symbolic-representation.png" style="margin:auto;max-width:900px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -7786,7 +7786,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Word Embeddings - Intuition (Example)" src="images/plots/embeddings/embeddings-intuition-example.png" style="margin:auto;max-width:600px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/plots/embeddings/embeddings-intuition-example.png" style="margin:auto;max-width:600px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8324,7 +8324,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Word2Vec - CBOW" src="images/illustrations/word2vec/word2vec-cbow-setup.png" style="margin:auto;max-width:800px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/word2vec/word2vec-cbow-setup.png" style="margin:auto;max-width:800px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8347,7 +8347,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Word2Vec - Skip-gram" src="images/illustrations/word2vec/word2vec-skipgram-setup.png" style="margin:auto;max-width:800px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/word2vec/word2vec-skipgram-setup.png" style="margin:auto;max-width:800px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8797,7 +8797,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="ELMo - Training Setup" src="images/illustrations/elmo/elmo-training-setup.png" style="margin:auto;max-width:800px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/elmo/elmo-training-setup.png" style="margin:auto;max-width:800px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8822,7 +8822,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="ELMo - Final Embeddings (Alternatives)" src="images/illustrations/elmo/elmo-final-embedding.png" style="margin:auto;max-width:700px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/elmo/elmo-final-embedding.png" style="margin:auto;max-width:700px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -8889,7 +8889,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="BERT - Example Setup" src="images/illustrations/bert/bert-example-setup.png" style="margin:auto;max-width:900px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/bert/bert-example-setup.png" style="margin:auto;max-width:900px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -9537,7 +9537,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SPLADE - Basic Illustration" src="images/illustrations/splade/splade-basic-illustration.png" style="margin:auto;max-width:900px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/splade/splade-basic-illustration.png" style="margin:auto;max-width:900px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -9614,7 +9614,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Doc2Vec - PV-DM Example" src="images/illustrations/doc2vec/doc2vec-pvdm-basic-setup.png" style="margin:auto;max-width:800px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/doc2vec/doc2vec-pvdm-basic-setup.png" style="margin:auto;max-width:800px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -9638,7 +9638,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Doc2Vec - PV-DBOW Example" src="images/illustrations/doc2vec/doc2vec-pvdbow-basic-setup.png" style="margin:auto;max-width:700px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/doc2vec/doc2vec-pvdbow-basic-setup.png" style="margin:auto;max-width:700px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -9674,7 +9674,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="Skip-Thought - Basic Example" src="images/illustrations/skipthought/skipthought-basic-example.png" style="margin:auto;max-width:800px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/skipthought/skipthought-basic-example.png" style="margin:auto;max-width:800px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -9735,7 +9735,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SBERT - Classification Loss" src="images/illustrations/sbert/sbert-classification-loss.png" style="margin:auto;max-width:450px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/sbert/sbert-classification-loss.png" style="margin:auto;max-width:450px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -9782,7 +9782,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SBERT - Regression Loss" src="images/illustrations/sbert/sbert-regression-loss.png" style="margin:auto;max-width:450px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/sbert/sbert-regression-loss.png" style="margin:auto;max-width:450px;width:100%"/></p>
 </div>
 </div>
 </div>
@@ -9828,7 +9828,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SBERT - Triplet Loss" src="images/illustrations/sbert/sbert-triplet-loss.png" style="margin:auto;max-width:700px;width:100%"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/sbert/sbert-triplet-loss.png" style="margin:auto;max-width:700px;width:100%"/></p>
 </div>
 </div>
 </div>
